kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chack-landing-service
spec:
  selector:
    app: chack-landing
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
