kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chack-landing-ingress
  labels:
    app: chack-landing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - chack-check.ru
    secretName: letsencrypt
  rules:
  - host: chack-check.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chack-landing-service
            port:
              number: 3000
